--- a/view/index.html
+++ b/view/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Luba</title>
-</head>
-<body>
-<nav>
 
-</nav>
-<img src="http://imageloveyou.ru/imgbig/221.jpg" alt="Luba">
-</body>
-</html>
+<ul>
+  <li><a href="/list">todo today</a></li>
+  <li><a href="/list">todo tomorrow</a></li>
+</ul>
