--- a/view/list.html
+++ b/view/list.html
@@ -1,15 +1,8 @@
-<h2>todo today</h2>
+<h2><%= name %></h2>
+<% todos.forEach((item) => { %>
 <label>
     <input type="checkbox">
-    feed my cat
+    <%= item %>
 </label>
 <br>
-<label>
-    <input type="checkbox">
-    brash my teeth
-</label>
-<br>
-<label>
-    <input type="checkbox">
-    do my morning exercises
-</label>
+<% })%>
